Nutch Change Log

Release 1.5.1 - 07/02/2012

* NUTCH-1400 Remove developer -core option for bin/nutch (jnioche)

* NUTCH-1384 Typo in ParseSegment's run-method (Matthias Agethle via markus)

* NUTCH-1398 Upgrade to Hadoop 1.0.3 (jnioche)

Release 1.5 - 04/15/2012

* NUTCH-1208 Don't include KEYS file in bin distribution (jnioche)

* NUTCH-1234 Upgrade to Tika 1.1 (jnioche, markus)

* NUTCH-809 Parse-metatags plugin (jnioche)

* NUTCH-1310 Nutch to send HTTP-accept header (markus)

* NUTCH-1305 Domain(blacklist)URLFilter to trim entries (markus)

* NUTCH-1307 Improve formatting of ant targets for clearer project help (lewismc)

* NUTCH-1299 LinkRank inverter to ignore records without Node (markus)

* NUTCH-1258 MoreIndexingFilter should be able to read Content-Type from both parse metadata and content metadata (jnioche, markus)

* NUTCH-1293 IndexingFiltersChecker to store detected content type in crawldatum metadata (markus)

* NUTCH-1291 Fetcher to stringify exception on // unexpected exception (markus)

* NUTCH-965 Skip parsing for truncated documents (alexis, lewismc, ferdy)

* NUTCH-1210 DomainBlacklistFilter (markus)

* NUTCH-1193 Incorrect url transform to lowercase: parameter solr (Eduardo dos Santos Leggiero via lewismc)

* NUTCH-1272 Wrong property name for index-static in nutch-default.xml (Daniel Baur via jnioche)

* NUTCH-1259 Store detected content-type in crawldatum metadata (jnioche, markus)

* NUTCH-1266 Subcollection to optionally write to configured fields (markus)

* NUTCH-1005 Parse headings plugin (markus)

* NUTCH-1264 Configurable indexing plugin index-metadata (jnioche)

* NUTCH-1242 Allow disabling of URL Filters in ParseSegment (Edward Drapkin via markus)

* NUTCH-1256 WebGraph to dump host + score (markus)

* NUTCH-1260 Fetcher should log fetching of redirects (Sebastian Nagel via markus)

* NUTCH-1255 Change ivy.xml of all plugins to remove "nutch.root" property (ferdy)

* NUTCH-1248 Generator to select on status (markus)
