@@ -123,7 +123,7 @@
 
 <property>
   <name>http.agent.version</name>
-  <value>Nutch-1.5</value>
+  <value>Nutch-1.5.1</value>
   <description>A version string to advertise in the User-Agent 
    header.</description>
 </property>
