@@ -28,7 +28,7 @@
         example/solr/conf/schema.xml?view=markup
         for more info.
     -->
-<schema name="nutch" version="1.4">
+<schema name="nutch" version="1.5.1">
     <types>
         <fieldType name="string" class="solr.StrField" sortMissingLast="true"
             omitNorms="true"/> 
