@@ -1,5 +1,5 @@
 name=apache-nutch
-version=1.5
+version=1.5.1
 final.name=${name}-${version}
 year=2012
 
